...
        child: Form(
          key: _formkey,
          child: Column(
            children: [
              TextInputWidget(
                controller: titleTextController,
                key: const Key('text_input_add'),
                label: 'Título',
                onChanged: (value) {
                  titleTextController.text = value;
                },
                validator: (value) {
                  if (value == null || value.isEmpty) {
...
          ),
          onPressed: () {
            Modular.to.pop();
          },
        ),
        TextButton(
          key: const Key('button_text_input_add'),
          child: Text(
            'OK',
            style: theme.textTheme.titleSmall,
          ),
          onPressed: () {
            if (_formkey.currentState!.validate()) {
...
